# chatserver_zy

./: .gitignore  CMakeLists.txt  README.md  main.cpp  server.bash
include/cppdb/: shared_object.h
include/gloab/: MessageQueue.h  WebsocketServer.h  chatServer.h  gloabal.h  message.h  server.h
include/model/: Friendship.h  FriendshipModel.h  Group.h  GroupMember.h  GroupModel.h  UnreadGroupMessage.h  UnreadGroupMessageModel.h  UnreadUserMessage.h  UnreadUserMessageModel.h  User.h  UserMessage.h  UserMessageModel.h  UserModel.h
include/service/: AddFriendService.h  AddGroupService.h  ChatService.h  CreatGroupService.h  FriendchatService.h  GroupchatService.h  LoginOutService.h  LoginService.h  RegistService.h  service.h
include/uitls/: uitls.h
lib/: jsoncpp.cpp  libcppdb.so.1  libcppdb_mysql.so.1
src/model/: 1.cpp  CMakeLists.txt  FriendshipModel.cpp  GroupModel.cpp  UnreadGroupMessageModel.cpp  UnreadUserMessageModel.cpp  UserMessageModel.cpp  UserModel.cpp
src/server_chat/: CMakeLists.txt  WebsocketServer.cpp  gloabal.cpp  message.cpp  server.cpp
src/service/: AddFriendService.cpp  AddGroupService.cpp  CMakeLists.txt  ChatService.cpp  CreatGroupService.cpp  FriendchatService.cpp  GroupchatService.cpp  LoginOutService.cpp  LoginService.cpp  RegistService.cpp  service.cpp
src/uitls/: CMakeLists.txt  uitls.cpp
